Removed inline css Updated rule reference

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -384,8 +384,8 @@
                                         <div class="row">
                                         <div class="col-sm-12">
                                             <legend>Spatial</legend>
-                                            <div class="info-group" style="margin-top: -20px; margin-bottom:20px;">
-                                                <table>
+                                            <div class="coverage-container">
+                                                <table class="info-table">
                                                     <tbody>
                                                         {% if spatial_coverage.name %}
                                                         <tr>
@@ -484,8 +484,8 @@
                                                         {% csrf_token %}
                                                          <div class="col-sm-12">
                                                             <legend>Spatial</legend>
-                                                            <div class="info-group" style="margin-top: -20px; margin-bottom:20px;">
-                                                                 <table>
+                                                            <div class="coverage-container">
+                                                                 <table class="info-table" >
                                                                      <tbody>
                                                                          <tr>
                                                                              <th class="text-muted">Coordinate System/Geographic Projection</th>
