--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -8,41 +8,41 @@
             {% if query %}
                 <input class="btn btn-default inline" type="button" value="Clear All" style="margin-bottom: 10px" onclick="clearAllFaceted()">
                 {% for key, values in facets.fields.items %}
-                    {% if values %}
+                    {% if values and key != 'public' and key != 'discoverable' %}
                         <div class="panel-group" id="faceting-{{ key }}">
                             <div class="panel panel-primary">
                                 <div class="panel-heading">
-                                <h4 class="panel-title">
-                                    <a data-toggle="collapse" href="#{{ key }}">
-                                        {% if key == 'author'%}
-                                            &nbsp; Filter by Author
-                                        {% elif key ==  'subjects'%}
-                                            &nbsp; Filter by Subject
-                                        {% elif key ==  'resource_type'%}
-                                            &nbsp; Filter by Resource Type
-                                        {% elif key ==  'public'%}
-                                            &nbsp; Filter by Public
-                                        {% elif key ==  'owners_names'%}
-                                            &nbsp; Filter by Owner
-                                        {% elif key ==  'discoverable'%}
-                                            &nbsp; Filter by Discoverable
-                                        {% endif %}
-                                        <span
-                                            {% if key == 'author' or key == 'subjects' or key == 'resource_type'%}
-                                                class="glyphicon glyphicon-minus pull-left"
-                                            {% else %}
-                                                class="glyphicon glyphicon-plus pull-left"
-                                            {% endif %}>
-                                        </span>
-                                    </a>
-                                </h4>
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" href="#{{ key }}">
+                                            {% if key == 'author'%}
+                                                &nbsp; Filter by Author
+                                            {% elif key ==  'subjects'%}
+                                                &nbsp; Filter by Subject
+                                            {% elif key ==  'resource_type'%}
+                                                &nbsp; Filter by Resource Type
+                                            {% elif key ==  'public'%}
+                                                &nbsp; Filter by Public
+                                            {% elif key ==  'owners_names'%}
+                                                &nbsp; Filter by Owner
+                                            {% elif key ==  'discoverable'%}
+                                                &nbsp; Filter by Discoverable
+                                            {% endif %}
+                                            <span
+                                                {% if key == 'author' or key == 'subjects' or key == 'resource_type'%}
+                                                    class="glyphicon glyphicon-minus pull-left"
+                                                {% else %}
+                                                    class="glyphicon glyphicon-plus pull-left"
+                                                {% endif %}>
+                                            </span>
+                                        </a>
+                                    </h4>
                                 </div>
                                 <div id="{{ key }}"
-                                     {% if key == 'author' or key == 'subjects' or key == 'resource_type'%}
+                                    {% if key == 'author' or key == 'subjects' or key == 'resource_type'%}
                                         class="panel-collapse collapse in"
-                                     {% else %}
+                                    {% else %}
                                         class="panel-collapse collapse"
-                                     {% endif %}>
+                                    {% endif %}>
                                     <ul class="list-group" id="list-group-{{ key }}" style="height: 200px; overflow-y: auto;">
                                     {% for item in values %}
                                         {% if item.1 > 0 %}
@@ -80,6 +80,65 @@
                         </div>
                     {% endif %}
                 {% endfor %}
+
+                <div class="panel-group" id="faceting-availability">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" href="#availability">
+                                    &nbsp; Filter by Availability
+                                    <span class="glyphicon glyphicon-plus pull-left"></span>
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="availability" class="panel-collapse collapse">
+                            <ul class="list-group" id="list-group-availability" style="height: 200px; overflow-y: auto;">
+                                {% for key, values in facets.fields.items %}
+                                    {% if key == 'public' or key == 'discoverable' %}
+                                        {% for item in values %}
+                                            {% if item.1 > 0 %}
+                                                <li class="list-group-item clearfix" rel="{{ key }},{{ item.0 }}">
+                                                <input class="faceted-selections" id="{{ key }}-{{ item.0 }}" value="{{ key }},{{ item.0 }}" type="checkbox" class="pull-left"> &nbsp;&nbsp;
+                                                    <a onclick="formURL('{{ key }}', '{{ item.0 }}')" role="button">
+                                                        {% if key == 'public' and item.0 == 'true' %}
+                                                            Public
+                                                        {% elif key == 'public' and item.0 == 'false' %}
+                                                            Private
+                                                        {% elif key == 'discoverable' %}
+                                                            Discoverable
+                                                        {% endif %}
+                                                    </a>
+                                                    {% if item.1 >= 1 and item.1 < 2 %}
+                                                        <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-9">
+                                                    {% elif item.1 >= 2 and item.1 <= 4 %}
+                                                        <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-9">
+                                                    {% elif item.1 > 4 and item.1 <= 6 %}
+                                                        <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-8">
+                                                    {% elif item.1 > 6 and item.1 <= 10 %}
+                                                        <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-7">
+                                                    {% elif item.1 > 10 and item.1 <= 18 %}
+                                                        <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-6">
+                                                    {% elif item.1 > 18 and item.1 <= 32 %}
+                                                        <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-5">
+                                                    {% elif item.1 > 32 and item.1 <= 57 %}
+                                                        <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-4">
+                                                    {% elif item.1 > 57 and item.1 <= 100 %}
+                                                        <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-3">
+                                                    {% elif item.1 > 100 and item.1 <= 178 %}
+                                                        <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-2">
+                                                    {% elif item.1 > 178 %}
+                                                        <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-1">
+                                                    {% endif %}{{ item.1 }}
+                                                </span>
+                                            </li>
+                                            {% endif %}
+                                        {% endfor %}
+                                    {% endif %}
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             {% endif %}
         </div>
         <div class="col-lg-9" id="items">
@@ -319,7 +378,7 @@
             }
         }
         var reorderDivs = function() {
-            var faceted_fields = ['author', 'subjects', 'resource_type', 'public', 'owners_names', 'discoverable'];
+            var faceted_fields = ['author', 'subjects', 'resource_type', 'owners_names', 'availability'];
             var div_ordering = [];
             faceted_fields.forEach(function(field){
                 var faceting_div = "faceting-"+field;
