Fixed typo Updating

--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -1034,7 +1034,7 @@
 
 
             // Unspecified goes away as soon as a user clicks.
-            $("input[name='state'").click(function () {
+            $("input[name='state']").click(function () {
                     if ($(this).val() == "Unspecified") {
                         $(this).val("");
                     }
