--- a/hs_app_timeseries/templates/pages/timeseriesresource.html
+++ b/hs_app_timeseries/templates/pages/timeseriesresource.html
@@ -118,8 +118,12 @@
                              <h3 style="color: red" id="file-type-error"></h3>
                           <hr>
                           <div>
-                              <strong><input type="checkbox" name="extract-metadata" value="No" onclick="setCheckboxValue(this)"> Check to extract metadata from this uploaded file</strong>
-                              <br><br>
+                              <div class="checkbox">
+                                  <label>
+                                      <input type="checkbox" name="extract-metadata" value="No" onclick="setCheckboxValue(this)">
+                                      Check to extract metadata from this uploaded file
+                                  </label>
+                              </div>
 
                               <div class="alert alert-warning" role="alert">
                                   <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
