[#2630] UI changes - removed option 'Other' from identfier dropdown

--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -558,11 +558,11 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    {% if name == "Google Scholar" %}
+                                                    {% if name == "GoogleScholarID" %}
                                                     <i class="identifier-icon ai ai-google-scholar-square"></i>
                                                     {% elif name == "ORCID" %}
                                                     <i class="identifier-icon ai ai-orcid"></i>
-                                                    {% elif name == "ResearchGate" %}
+                                                    {% elif name == "ResearchGateID" %}
                                                     <i class="identifier-icon ai ai-researchgate-square"></i>
                                                     {% elif name == "ResearcherID" %}
                                                     <img class="identifier-icon"
