--- a/theme/templates/includes/identifiers-form.html
+++ b/theme/templates/includes/identifiers-form.html
@@ -14,11 +14,10 @@
             <label>Identifier Name</label>
             <select class="form-control select-identifier">
                 <option disabled selected> -- Select an option -- </option>
-                <option value="Google Scholar">Google Scholar</option>
+                <option value="GoogleScholarID">GoogleScholarID</option>
                 <option value="ORCID">ORCID</option>
-                <option value="ResearchGate">ResearchGate</option>
+                <option value="ResearchGateID">ResearchGateID</option>
                 <option value="ResearcherID">ResearcherID</option>
-                <option value="Other">Other</option>
             </select>
         </fieldset>
 
@@ -42,52 +41,30 @@
         <fieldset class="select-identifier-fieldset">
             <label>Identifier Name</label>
             <select class="form-control select-identifier"
-                    {% if name == "Google Scholar" or name == "ORCID" or name == "ResearchGate" or name == "ResearcherID" %}
+                    {% if name == "GoogleScholarID" or name == "ORCID" or name == "ResearchGateID" or name == "ResearcherID" %}
                     name="identifier_name"
                     value="{{ name }}"
-                    {% else %}
-                    value = "Other"
                     {% endif %}
             >
-                <option value="Google Scholar"
-                        {% if name == "Google Scholar" %}selected{% endif %}>
-                    Google Scholar
+                <option value="GoogleScholarID"
+                        {% if name == "GoogleScholarID" %}selected{% endif %}>
+                    GoogleScholarID
                 </option>
                 <option value="ORCID"
                         {% if name == "ORCID" %}selected{% endif %}>
                     ORCID
                 </option>
-                <option value="ResearchGate"
-                        {% if name == "ResearchGate" %}selected{% endif %}>
-                    ResearchGate
+                <option value="ResearchGateID"
+                        {% if name == "ResearchGateID" %}selected{% endif %}>
+                    ResearchGateID
                 </option>
                 <option value="ResearcherID"
                         {% if name == "ResearcherID" %}selected{% endif %}>
                     ResearcherID
                 </option>
 
-                <option value="Other"
-                        {% if not name == "Google Scholar" and not name == "ORCID" and not name == "ResearchGate" and not name == "ResearcherID" %}
-                        selected
-                        {% endif %}
-                >Other
-                </option>
             </select>
         </fieldset>
-
-        {% if name == "Google Scholar" or name == "ORCID" or name == "ResearchGate" or name == "ResearcherID" %}
-        <fieldset class="hidden identifier-specify">
-            <label>Specify</label>
-            <input class="form-control">
-        </fieldset>
-        {% else %}
-        <fieldset class="identifier-specify">
-            <label>Specify</label>
-            <input name="identifier_name"
-                   value="{{ name }}"
-                   class="form-control">
-        </fieldset>
-        {% endif %}
 
         <fieldset>
             <label>Identifier Link</label>
