--- a/irods_browser_app/templates/irods_upload_add.html
+++ b/irods_browser_app/templates/irods_upload_add.html
@@ -22,6 +22,10 @@
                         <div>
                             <div>Viewing : <input type="text" class="form-control" id="irods_view_store" ></div>
                             <div id = "file_struct"></div>
+                            <div>
+                               <input id="file_ref_chk" type="checkbox">
+                               <label for="file_ref_chk">Add selected files as reference?</label>
+                            </div>
                         </div>
                         <div id="file-types-irods">Any file type can be uploaded.</div>
                         <div id="file-multiple-irods">Multiple file upload is allowed.</div>
