--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -168,7 +168,14 @@
             <div class="row">
                 <div class="col-md-12">
                     <button type="button" class="close btn-close-message">&times;</button>  {# TODO: TESTING #}
-                    <p>{{ message }}</p>
+                    <!-- extra tags can be used to pass html -->
+                    {% if 'html' in message.tags %}
+                        {% autoescape off %}
+                        {{ message }}
+                        {% endautoescape %}
+                    {% else %}
+                        <p>{{ message }}</p>
+                    {% endif %}
                 </div>
             </div>
         </div>
