a couple of clean up related to apps

--- a/hs_core/templates/pages/apps.html
+++ b/hs_core/templates/pages/apps.html
@@ -14,11 +14,11 @@
         <p>
           CommonsShare apps allow you to visualize, analyze, and work with resources
           (data and models) in CommonsShare. Apps are hosted on separate web servers
-          from the CommonsShare website (www.hydroshare.org) and access CommonsShare
+          from the CommonsShare website (www.commonsshare.org) and access CommonsShare
           resources using web services via the REST applications programmers
           interface (API). Anyone can write an app an then create a "Web App" resource
           that holds the configuration information for launching the App from CommonsShare.
-          This page lists CUAHSI approved web apps that are supported as part of CommonsShare.</p>
+          This page lists NIH Data Commons approved web apps that are supported as part of CommonsShare.</p>
       </div>
     </div>
   </div>
