--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -152,6 +152,10 @@
                         <span>Get file URL</span>
                     </li>
                     {% if page.perms.change and resource_edit_mode and cm.resource_type == "CompositeResource"%}
+                        <li id="btn-set-generic-file-type" data-menu-name="setgenericfiletype">
+                            <span class="glyphicon glyphicon-check icon-blue"></span>
+                            <span>Set Generic Aggregation</span>
+                        </li>
                         <li id="btn-set-geo-file-type" data-menu-name="setgeorasterfiletype">
                             <span class="glyphicon glyphicon-check icon-blue"></span>
                             <span>Set Geographic Raster Aggregation</span>
