--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -2,7 +2,7 @@
 
 {% load mezzanine_tags static blog_tags accounts_tags %}
 
-{% block meta_title %}Share and Collaborate{% endblock %}
+{% block meta_title %}Find, Analyze and Share Water Data with CUAHSI's HydroShare{% endblock %}
 
 {% block main %}
     {# Begin Maintenance Warning #}
@@ -24,12 +24,10 @@
             <div class="container">
                 <div class="row home-page-block">
                     <div class="col-xs-12">
-                        <center><strong><h3 class="home-page-block-title">Join the community to start sharing</h3>
-                        </strong>
-                        </center>
-                        <center>
-                            <span>HydroShare is an online collaboration environment for sharing data, models, and code.</span>
-                        </center>
+                        <center><strong><h3 class="home-page-block-title">
+                            HydroShare is CUAHSI's online collaboration environment for
+                            sharing data, models, and code.
+                        </h3></strong></center>
                         <center><a class="btn btn-primary btn-signup slideInBlock" href="sign-up/">Sign up now</a>
                         </center>
                     </div>
@@ -50,18 +48,8 @@
             <div class="item active parallax-window" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg3.jpg)">
                 <div class="caption-wrapper">
                     <div class="item-caption">
-                        <h1><strong>Share your data and models with colleagues</strong></h1>
-                        <h4>Upload, share, and access a broad set of hydrologic data types and models. Manage who has
-                            access to the content that you share.</h4>
-                    </div>
-                </div>
-            </div>
-
-            <div class="item parallax-window" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg1.jpg)">
-                <div class="caption-wrapper">
-                    <div class="item-caption">
                         <h1><strong>Discover</strong></h1>
-                        <h4>Discover content shared by your colleagues and other users. Access a broad range of resource
+                        <h4>Discover content shared by your colleagues and other users. Access a broad range of data
                             types used in hydrology.</h4>
                     </div>
                 </div>
@@ -71,7 +59,18 @@
                 <div class="caption-wrapper">
                     <div class="item-caption">
                         <h1><strong>Collaborate</strong></h1>
-                        <h4>Upload your data or models and share them with other users. You control who has access.</h4>
+                        <h4>Upload and share a broad set of hydrologic data types including time series, GIS,
+                        and models. You manage who can access the content you share.</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="item parallax-window" style="background-image: url({{ STATIC_URL }}img/home-page/carousel/bg1.jpg)">
+                <div class="caption-wrapper">
+                    <div class="item-caption">
+                        <h1><strong>Fulfill your Data Management Plan and Formally Publish your Data</strong></h1>
+                        <h4>Give your funders confidence that your data will be available in perpetuity and obtain Digital
+                        Object Identifiers so your content can be cited.</h4>
                     </div>
                 </div>
             </div>
@@ -92,7 +91,7 @@
         <h2 class="home-page-block-title">How it works</h2>
         <div class="row home-page-block">
             <div class="steps-container">
-                <div class="col-xs-12 col-sm-3 step-wrapper slideInBlock">
+                <div class="col-xs-12 col-sm-2 col-sm-offset-1 step-wrapper slideInBlock">
                     <div class="step-item">
                         <div class="step-number">1</div>
                         <h4>Create data</h4>
@@ -106,7 +105,7 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-sm-3 step-wrapper slideInBlock">
+                <div class="col-xs-12 col-sm-2 step-wrapper slideInBlock">
                     <div class="step-item">
                         <div class="step-number">2</div>
                         <h4>Upload to HydroShare</h4>
@@ -121,7 +120,7 @@
 
                 </div>
 
-                <div class="col-xs-12 col-sm-3 step-wrapper slideInBlock">
+                <div class="col-xs-12 col-sm-2 step-wrapper slideInBlock">
                     <div class="step-item">
                         <div class="step-number">3</div>
                         <h4>Describe with metadata</h4>
@@ -135,7 +134,7 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-sm-3 step-wrapper slideInBlock">
+                <div class="col-xs-12 col-sm-2 step-wrapper slideInBlock">
                     <div class="step-item">
                         <div class="step-number">4</div>
                         <h4>Share with colleagues</h4>
@@ -145,6 +144,21 @@
                         <div>
                             <img class="img-responsive img-step" src="{{ STATIC_URL }}img/home-page/step4.png"
                                  alt="Share with colleagues">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 col-sm-2 step-wrapper slideInBlock">
+                    <div class="step-item">
+                        <div class="step-number">5</div>
+                        <h4>Formally Publish</h4>
+                        <div class="description-container table-display">
+                            <span class="step-description table-cell-display">Obtain a Digital Object Identifier so your data can be easily cited.
+                            Reference related journal publications in your metadata.</span>
+                        </div>
+                        <div>
+                            <img class="img-responsive img-step" src="{{ STATIC_URL }}img/home-page/step1.png"
+                                 alt="Create data">
                         </div>
                     </div>
                 </div>
@@ -172,23 +186,6 @@
                 <div class="col-xs-12- col-sm-5 slideInBlock">
                     <img class="img-responsive" src="{{ STATIC_URL }}img/home-page/laptop.png"
                          alt="Browsing HydroShare">
-                </div>
-            </div>
-        </div>
-
-        <div class="screen-sizes">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-12 col-sm-6">
-                        {# Image credit: Android Design. Used under Creative Commons license. http://developer.android.com/design/style/devices-displays.html #}
-                        <img class="img-devices img-responsive" src="{{ STATIC_URL }}img/da_devices.png"
-                             alt="Screen sizes">
-                    </div>
-                    <div class="col-xs-12 col-sm-6 ">
-                        <div class="table-display">
-                            <h2 class="table-cell-display availability-description">Available on all your devices</h2>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
