--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -2,7 +2,7 @@
 
 {% load mezzanine_tags static blog_tags accounts_tags %}
 
-{% block meta_title %}Find, Analyze and Share Water Data with CUAHSI's HydroShare{% endblock %}
+{% block meta_title %}Find, Analyze and Share Water Data | CUAHSI HydroShare{% endblock %}
 
 {% block main %}
     {# Begin Maintenance Warning #}
@@ -49,7 +49,7 @@
                 <div class="caption-wrapper">
                     <div class="item-caption">
                         <h1><strong>Discover</strong></h1>
-                        <h4>Discover content shared by your colleagues and other users. Access a broad range of data
+                        <h4>Discover content shared by your colleagues and other researchers. Access a broad range of data
                             types used in hydrology.</h4>
                     </div>
                 </div>
