--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -2,7 +2,7 @@
 
 {% load mezzanine_tags static blog_tags accounts_tags %}
 
-{% block meta_title %}Find, Analyze and Share Water Data | CUAHSI HydroShare{% endblock %}
+{% block meta_title %}Find, Analyze and Share Water Data{% endblock %}
 
 {% block main %}
     {# Begin Maintenance Warning #}
