--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -340,16 +340,16 @@
             "@type": "ServiceChannel",
             "serviceUrl": "https://hydroshare.org/hsapi/resource",
             "providesService": {
-            "@type": "EntryPoint",
+            "@type": "Service",
                 "name": "HydroShare Resources REST API",
-                "description": "Programattically search and filter HydroShare datasets via a JSON REST API",
+                "description": "Programmatically search and filter HydroShare datasets via a JSON REST API",
                 "potentialAction": {
                     "@type": "SearchAction",
                     "target": {
                         "@type": "EntryPoint",
                         "contentType": ["application/json"],
                         "urlTemplate": "https://hydroshare.org/hsapi/resource",
-                        "description": "Programattically search and filter HydroShare datasets via a JSON REST API",
+                        "description": "Programmatically search and filter HydroShare datasets via a JSON REST API",
                         "httpMethod": ["GET", "POST"]
                     }
                 }
