--- a/theme/templates/resource-landing-page/citation.html
+++ b/theme/templates/resource-landing-page/citation.html
@@ -20,7 +20,7 @@
             <div>
                 <em>
                     When permanently published, this resource will have a formal Digital Object Identifier (DOI) and will be
-                    accessible at the following URL: http://doi.org/10.4211/hs.{{ cm.short_id }}. When you are
+                    accessible at the following URL: https://doi.org/10.4211/hs.{{ cm.short_id }}. When you are
                     ready to permanently publish, click the Publish button at the top of the page to request your DOI.
                     Reminder: You may no longer edit your resource, once you have permanently published it.
                 </em>
