[#2676] remove paragraph for script resource type

--- a/hs_core/templates/pages/metadata_terms.html
+++ b/hs_core/templates/pages/metadata_terms.html
@@ -1440,11 +1440,7 @@
             <li><strong>Description: </strong>Web App Version</li>
         </ul>
 
-    <h3>Script Resource Type Description</h3>
-    <p>
-        A Script resource is intended to store any stand-alone programming script that has been written to perform a specific operation.
-        The languages currently supported are Python, R, and MATLAB. The specific metadata elements are as follows:
-    </p>
+    <h3>Metadata terms for the Script Resource Type</h3>
     <a name="scriptLanguage"></a>
         <ul >
             <li><strong>Term: </strong>scriptLanguage</li>
