Fixing up ld+json issues

--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -208,7 +208,7 @@
         "geolink": "http://schema.geolink.org/1.0/base/main#",
         "schema": "http://schema.org/"
     },
-    "@type": ["Service", "Organization"],
+    "@type": ["Service", "Organization", "DataCatalog"],
     "@id": "https://www.hydroshare.org",
     "additionalType": "https://geodex.org/voc/ResearchRepositoryService",
     "legalName": "CUAHSI HydroShare",
