--- a/theme/templates/resource-landing-page/top-right-buttons.html
+++ b/theme/templates/resource-landing-page/top-right-buttons.html
@@ -2,6 +2,60 @@
 {#        ======= Top right buttons =======#}
 <div class="col-sm-12">
     <div class="custom-btn-toolbar height-fix">
+        {% if page.perms.delete %}
+            <a id="delete" data-toggle="modal" data-target="#delete-resource-dialog">
+                <span data-toggle="tooltip" data-placement="bottom" title="Delete this resource"
+                      class="glyphicon glyphicon-trash icon-button btn-remove"></span>
+            </a>
+        {% endif %}
+
+        {% if page.perms.delete and cm.can_be_published and cm.raccess.public %}
+            <a id="publish" data-toggle="modal" class="btn btn-success pull-right"
+               data-target="#submit-for-publication-dialog">
+                <span data-toggle="tooltip" data-placement="bottom"
+                    title="Publish this resource">Publish</span>
+            </a>
+        {% else %}
+            <a id="publish" class="btn pull-right" data-toggle="modal">
+                <span data-toggle="tooltip" data-placement="bottom"
+                    title='<p>The following metadata are still required to publish the<br />resource or make the resource public or discoverable:</p><ul><li>Abstract</li><li>Keywords</li></ul><p>You must also add content files to your resource before it<br />can be published, public or discoverable.</p>'>
+                    Publish
+                </span>
+            </a>
+        {% endif %}
+
+        {% if not cm.raccess.published %}
+            <a id="doi-info" href="#" class="btn btn-info pull-right">
+                <span data-html="true" data-toggle="tooltip" data-placement="bottom"
+                      title="<p>Your resource is published under the following DOI:</p><p><code>10.4211/hs.{{ cm.short_id }}</code></p><p>Click to copy to clipboard.</p>">
+                    DOI
+                </span>
+            </a>
+            <textarea id="hiddenDOIForCopy" style="display: none;">10.4211/hs.{{ cm.short_id }}</textarea>
+            <script>
+                $("#doi-info").on("click", function(e) {
+                    e.preventDefault();
+
+                    var copyTextarea = document.querySelector('#hiddenDOIForCopy');
+                    copyTextarea.style.display = "block";
+                    copyTextarea.focus();
+                    copyTextarea.select();
+
+                    try {
+                        var successful = document.execCommand('copy');
+                        var msg = successful ? 'successful' : 'unsuccessful';
+                        console.log('Copying text command was ' + msg);
+                        copyTextarea.style.display = "none";
+                    } catch (err) {
+                        console.log('Oops, unable to copy');
+                        copyTextarea.style.display = "none";
+                    }
+
+                    return false;
+                });
+            </script>
+        {% endif %}
+
         {% if not metadata_form %}
 
             {# "add to open with list" for WebApp resource only #}
@@ -65,25 +119,12 @@
                 {% if page.perms.change or is_owner_user and cm.raccess.published %}
                     <form action="{{ cm.get_absolute_url }}" method="post">
                         {% csrf_token %}
-                        {% if page.perms.delete %}
-                            <a id="delete" data-toggle="modal" data-target="#delete-resource-dialog">
-                                <span data-toggle="tooltip" data-placement="bottom" title="Delete this resource"
-                                      class="glyphicon glyphicon-trash icon-button btn-remove"></span>
-                            </a>
-                        {% endif %}
 
                         {% if page.perms.change %}
                             <input name="resource-mode" type="hidden" value="edit"/>
                             <button id="edit-metadata" type="submit" data-toggle="tooltip" data-placement="bottom"
                                     title="Edit this resource"
                                     class="glyphicon glyphicon-pencil icon-button icon-blue"></button>
-                        {% endif %}
-
-                        {% if page.perms.delete and cm.can_be_published and cm.raccess.public %}
-                            <a id="publish" data-toggle="modal" data-target="#submit-for-publication-dialog">
-                                <span data-toggle="tooltip" data-placement="bottom" title="Publish this resource"
-                                      class="glyphicon glyphicon-globe icon-button icon-blue"></span>
-                            </a>
                         {% endif %}
 
                         {% if page.perms.delete or cm.raccess.published %}
