[#2676] remove rogue w and add two paragraphs

--- a/hs_core/templates/pages/metadata_terms.html
+++ b/hs_core/templates/pages/metadata_terms.html
@@ -280,7 +280,7 @@
             <li><strong>Description: </strong>Personal <a href="https://scholar.google.com/" target="_blank">Google Scholar</a> profile page URL.</li>
         </ul>
     <h3>Metadata terms for the Time Series Resource Type</h3>
-        <br/>
+    <p>The time series resource type is based on version 2.0 of the Observations data model. You can learn more about ODM2 at htt://www.odm2.org. Some of the metadata terms for the time series resource type are based on controlled vocabularies for ODM2 that are managed at <a href="http://vocabulary.odm2.org">http://vocabulary.odm2.org.</a></p>
         <a class="scrollTo" name="site"></a>
         <ul>
             <li><strong>Term: </strong>site</li>
@@ -1412,7 +1412,7 @@
             <li><strong>Description: </strong>Methods used for calibration (software, manual
                 calibration..etc.).</li>
         </ul>
-    <br/>W
+    <br/>
     <a class="scrollTo" name="inputType"></a>
         <ul >
             <li><strong>Term: </strong>inputType</li>
@@ -1538,6 +1538,8 @@
 
     <h3>Metadata terms for the Composite Resource Type</h3>
 
+    <p>A Composite resource is a resource that can include multiple files without file format limitations. However, it is also capable of containing typed aggregations of files (e.g., a geographic feature aggregation stored as an ESRI shapefile). The Composite resource is designed to support metadata and data functions at both the aggregation level and resource level to better support data management in HydroShare. Each aggregation contained within a Composite resource may be annotated with general metadata that apply specifically to the aggregation. Aggregations may also have metadata specific to the aggregation type and additional data functions established for that type (e.g., metadata extraction from TIFF or NetCDF file). The resource level metadata for a Composite resource is the same as metadata of the generic resource type.  </p>
+    <p>The following terms define the types of aggregations that can be added to a Composite Resource:</p>
      <a class="scrollTo" name="singleFileAggregation"></a>
         <ul >
             <li><strong>Term: </strong>SingleFileAggregation</li>
