--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -78,8 +78,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/"><img id="img-brand-logo" src="{{ STATIC_URL }}img/logo-lg.png"
-                                                      alt="{{ settings.SITE_TITLE }}"/></a>
+                <a class="navbar-brand" href="/">
+                    <img id="img-brand-logo" src="{{ STATIC_URL }}img/logo-lg.png" alt="{{ settings.SITE_TITLE }}"/>
+                    <div class="sub-brand">A CUAHSI Water Data Service</div>
+                </a>
             </div>
             <div class="collapse navbar-collapse">
                 {% page_menu "pages/menus/dropdown.html" %}
