More DOI UI edits

--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -455,11 +455,21 @@
                 </p>
 
                 <ul>
-                    <li>The title is descriptive</li>
-                    <li>The abstract is complete and self-explanatory</li>
-                    <li>The keywords are relevant</li>
-                    <li>Metadata is sufficient for the content to be understood</li>
-                    <li>The resource has content that merits publication as subject matter relevant to hydrologic science.</li>
+                    <li>
+                        <label><input type="checkbox" /> The title is descriptive</label>
+                    </li>
+                    <li>
+                        <label><input type="checkbox" /> The abstract is complete and self-explanatory</label>
+                    </li>
+                    <li>
+                        <label><input type="checkbox" /> The keywords are relevant</label>
+                    </li>
+                    <li>
+                        <label><input type="checkbox" /> Metadata is sufficient for the content to be understood</label>
+                    </li>
+                    <li>
+                        <label><input type="checkbox" /> The resource has meritable content relevant to hydrologic science</label>
+                    </li>
                 </ul>
 
                 <p>Please confirm that you accept the HydroShare Publication Agreement shown below.</p>
@@ -488,14 +498,18 @@
             <div class="modal-body">
                 <p>
                     Your request for publication has been successfully submitted. You will receive
-                    a response from help@cuahsi.org that confirms publication approval or
+                    a an response from help@cuahsi.org that confirms publication approval or
                     publication decline. If the resource is declined for publication, additional
                     feedback on required edits will be provided.
                 </p>
+                <p>
+                    Please do not hesitate tor each out to
+                    <a href="mailto:help@cuahsi.org">help@cuahsi.org</a> with any questions, comments,
+                    or suggestions.
+                </p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <a type="button" id="publish-btn-2" class="btn btn-danger" href="#">Publish</a>
+                <a type="button" id="publish-btn-2" data-dismiss="modal" class="btn btn-danger" href="#">Thank you!</a>
             </div>
         </div>
     </div>
