--- a/theme/templates/resource-landing-page/coverage.html
+++ b/theme/templates/resource-landing-page/coverage.html
@@ -270,7 +270,7 @@
                         </fieldset>
                     </form>
                 </div>
-                {% if cm.resource_type == "CompositeResource" and cm.logical_files %}
+                {% if cm.resource_type == "CompositeResource" and cm.has_logical_spatial_coverage %}
                      <button id="btn-update-resource-spatial-coverage"
                              type="button" class="btn btn-primary btn-form-submit">
                          Set spatial coverage from content files
@@ -364,7 +364,7 @@
                 {% endif %}
             </div>
         </div>
-    {% if cm.resource_type == "CompositeResource" and cm.logical_files %}
+    {% if cm.resource_type == "CompositeResource" and cm.has_logical_temporal_coverage %}
          <button id="btn-update-resource-temporal-coverage"
                  type="button" class="btn btn-primary btn-form-submit">
              Set temporal coverage from content files
