--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -162,7 +162,7 @@
                 {% for tool in relevant_tools.tool_list %}
                     {% if tool.openwithlist  %}
                         <li title="{{ tool.title }}">
-                                <a href="{% url 'tracking-applaunch' %}?url={{tool.url|urlencode}};name={{tool.title}}" target="_blank">
+                                <a href="{% url 'tracking-applaunch' %}?url={{tool.url|urlencode}};name={{ tool.title }};tool_res_id={{tool.res_id}};res_id={{ cm.short_id }}" target="_blank">
                                 <img class="dropdown-user-webapp-icon" src="{{ tool.icon_url }}">
                                 {% if tool.title|length > 20 %}
                                     <span>{{ tool.title|slice:":21"|add:"..." }}</span>
