--- a/theme/templates/accounts/sign_up_form.html
+++ b/theme/templates/accounts/sign_up_form.html
@@ -157,6 +157,7 @@
     $('.tagsinput').tagsInput({
       interactive: true,
       placeholder: "Organization(s)",
+      delimiter: [";"],
       autocomplete: {
           source: "/hsapi/dictionary/universities/",
           minLength: 3,
