Management task and small template update caught by management tast

--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -299,6 +299,7 @@
                 "url": "{{ cr.description }}/"
             }
         }
+        {%if not forloop.last%},{%endif%}
         {% endfor %}
     ],
     "provider": {
